<?xml version="1.0"?>
<package format="2">
  <name>jps3d</name>
  <version>0.0.0</version>
  <description>The jps3d package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sikang@todo.todo">sikang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>roscpp</depend>

  <export>
    <cpp cflags="-I${prefix}/include"
      lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib"/>
  </export>

</package>
